--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_generative_ai:
   image_picker: ^1.0.7
   path: ^1.9.0
+  emoji_picker_flutter: ^2.1.0
 
 dev_dependencies:
   flutter_test:
