--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   get_it: ^7.6.7
-  lottie: ^3.1.0
-  flutter_gemini: ^2.0.3
   google_generative_ai:
   image_picker: ^1.0.7
   path: ^1.9.0
   emoji_picker_flutter: ^2.1.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
