--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,18 @@
+buildscript {
+ext.kotlin_version = '1.9.22'
+repositories {
+    google()
+mavenCentral()
+}
+
+dependencies {
+    classpath 'com.android.tools.build:gradle:4.1.0'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+}
+
+
 allprojects {
+
     repositories {
         google()
         mavenCentral()
@@ -15,4 +29,5 @@ subprojects {
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
+}
 }
